--- a/LMS/backend/templates/question.html
+++ b/LMS/backend/templates/question.html
@@ -13,7 +13,7 @@
 		{% comment %} <li class="breadcrumb-item"><a href="{% url 'programs' %}">Programs</a></li> {% endcomment %}
 		{% comment %} <li class="breadcrumb-item"><a href="{% url 'program_detail' course.program.id %}">{{ course.program }}</a></li> {% endcomment %}
 		<li class="breadcrumb-item"><a href="{{ course.get_absolute_url }}">{{ course }}</a></li>
-		<li class="breadcrumb-item"><a href="{% url 'quiz_index' course.id %}">Quizzes</a></li>
+		<li class="breadcrumb-item"><a href="{% url 'course-structure' course.id %}">Quizzes</a></li>
 		<li class="breadcrumb-item active" aria-current="page">{{ quiz.title|title }}</li>
 	</ol>
 </nav>
